--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,18 @@
-logo_title: GEEK 三斤
+logo_title: Wei OUYANG
 
 style: black
 
 favicon: /favicon.ico
 
 menu:
-  作品: /project
-  域名: /domain
-  友联: /links
-  关于: /about
-  Github: https://github.com/sanjinhub
+  Projects: /project
+  Links: /links
+  About: /about
+  Github: https://github.com/oeway
 
-# 做了域名限制，请改成自己的 KEY
 valine:
-  appId: CmCti21ooOOIzFOhEyFkFvR0-gzGzoHsz
-  appKey: FqiyUqbg7McKN2eG0MCewupf
+  appId: 
+  appKey: 
 
 highlight:
   enable: false
